# silk

./: .gitmodules  CMakeLists.txt  README.md  recompile.sh  run_unit_tests.sh
codegen/: advance.py  domino.py
examples/: 2c3.rle  2c3double_long.rle  2c3single.rle  2c3single_long.rle  5c9.rle  e2f.rle  eater.rle  tl.rle  tl2.rle
include/silk/: bloom.hpp  completestill.hpp  core.hpp  floyd.hpp  heap.hpp  hilbert.hpp  logic.hpp  mainloop.hpp  metrics.hpp  nnue.hpp  perm.hpp  readrle.hpp  rollout.hpp  stable.hpp  torus.hpp  unknown.hpp
nnue/: arch.py
src/: CMakeLists.txt  common.hpp  cqueue.hpp  entry_point.cpp  entry_point.cu  heap_manager.cu  main_kernel.cu  parse_options.cu  testnet.cu
test/: CMakeLists.txt
test/gpu/: CMakeLists.txt  expose_clang_bug.cu  test_clang_bug.cu
test/gpu/unit/: still_lifes.hpp  test_aaa.cu  test_active.cu  test_advance.cu  test_bloom.cu  test_cuda.cu  test_floyd.cu  test_heap.cu  test_hilbert.cu  test_nnue.cu  test_perm.cu  test_rle.cu  test_rollout.cu  test_stableprop.cu  test_sum16.cu  test_torus.cu
